@@ -27,10 +27,12 @@ package org.spongepowered.neoforge.mixin.core.world.level.block.entity;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.NonNullList;
 import net.minecraft.core.RegistryAccess;
+import net.minecraft.server.level.ServerLevel;
 import net.minecraft.util.Mth;
 import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.crafting.AbstractCookingRecipe;
 import net.minecraft.world.item.crafting.RecipeHolder;
-import net.minecraft.world.level.Level;
+import net.minecraft.world.item.crafting.SingleRecipeInput;
 import net.minecraft.world.level.block.entity.AbstractFurnaceBlockEntity;
 import net.minecraft.world.level.block.state.BlockState;
 import org.checkerframework.checker.nullness.qual.Nullable;
@@ -56,6 +58,7 @@ import org.spongepowered.common.event.tracking.PhaseTracker;
 import org.spongepowered.common.inventory.adapter.impl.slots.SlotAdapter;
 import org.spongepowered.common.item.util.ItemStackUtil;
 import org.spongepowered.common.mixin.core.world.level.block.entity.BaseContainerBlockEntityMixin;
+import org.spongepowered.neoforge.accessor.world.level.block.entity.AbstractFurnaceBlockEntityAccessor_Neo;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -67,10 +70,7 @@ public abstract class AbstractFurnaceBlockEntityMixin_Neo extends BaseContainerB
 
     // @formatter:off
     @Shadow protected NonNullList<ItemStack> items;
-    @Shadow int cookingProgress;
-    @Shadow private static boolean shadow$canBurn(final RegistryAccess registryAccess, @Nullable final RecipeHolder<?> recipe, final NonNullList<ItemStack> slots, final int maxStackSize, final AbstractFurnaceBlockEntity furnace) {
-        throw new UnsupportedOperationException("Shadowed canBurn");
-    }
+    @Shadow int cookingTimer;
     // @formatter:on
 
     private boolean neo$filledWaterBucket;
@@ -78,10 +78,14 @@ public abstract class AbstractFurnaceBlockEntityMixin_Neo extends BaseContainerB
     // Tick up and Start
     @Redirect(method = "serverTick",
         at = @At(value = "INVOKE",
-            target = "Lnet/minecraft/world/level/block/entity/AbstractFurnaceBlockEntity;canBurn(Lnet/minecraft/core/RegistryAccess;Lnet/minecraft/world/item/crafting/RecipeHolder;Lnet/minecraft/core/NonNullList;ILnet/minecraft/world/level/block/entity/AbstractFurnaceBlockEntity;)Z",
+            target = "Lnet/minecraft/world/level/block/entity/AbstractFurnaceBlockEntity;canBurn(Lnet/minecraft/core/RegistryAccess;Lnet/minecraft/world/item/crafting/RecipeHolder;Lnet/minecraft/world/item/crafting/SingleRecipeInput;Lnet/minecraft/core/NonNullList;I)Z",
             ordinal = 1))
-    private static boolean neo$checkIfCanSmelt(final RegistryAccess registryAccess, @Nullable final RecipeHolder<?> recipe, final NonNullList<ItemStack> slots, final int maxStackSize, final AbstractFurnaceBlockEntity entityIn) {
-        if (!AbstractFurnaceBlockEntityMixin_Neo.shadow$canBurn(registryAccess, recipe, slots, maxStackSize, entityIn)) {
+    private static boolean neo$checkIfCanSmelt(
+        final RegistryAccess registryAccess, @Nullable final RecipeHolder<?> recipe, final SingleRecipeInput input,
+        final NonNullList<ItemStack> slots, final int maxStackSize, final ServerLevel level, final BlockPos entityPos,
+        final BlockState state, final AbstractFurnaceBlockEntity entityIn
+    ) {
+        if (!AbstractFurnaceBlockEntityAccessor_Neo.invoker$canBurn(registryAccess, recipe, input, slots, maxStackSize)) {
             return false;
         }
 
@@ -89,15 +93,15 @@ public abstract class AbstractFurnaceBlockEntityMixin_Neo extends BaseContainerB
         final ItemStackSnapshot fuel = ItemStackUtil.snapshotOf(slots.get(1));
 
         final Cause cause = PhaseTracker.getCauseStackManager().currentCause();
-        if (entity.cookingProgress == 0) { // Start
+        if (entity.cookingTimer == 0) { // Start
             final CookingEvent.Start event = SpongeEventFactory.createCookingEventStart(cause, (FurnaceBlockEntity) entityIn, Optional.of(fuel),
-                Optional.of((CookingRecipe) recipe.value()), Optional.of((ResourceKey) (Object) recipe.id()));
+                Optional.of((CookingRecipe) recipe.value()), Optional.of((ResourceKey) (Object) recipe.id().location()));
             SpongeCommon.post(event);
             return !event.isCancelled();
         } else { // Tick up
-            final ItemStackSnapshot cooking = ItemStackUtil.snapshotOf(entity.items.get(0));
+            final ItemStackSnapshot cooking = ItemStackUtil.snapshotOf(entity.items.getFirst());
             final CookingEvent.Tick event = SpongeEventFactory.createCookingEventTick(cause, (FurnaceBlockEntity) entityIn, cooking, Optional.of(fuel),
-                Optional.of((CookingRecipe) recipe.value()), Optional.of((ResourceKey) (Object) recipe.id()));
+                Optional.of((CookingRecipe) recipe.value()), Optional.of((ResourceKey) (Object) recipe.id().location()));
             SpongeCommon.post(event);
             return !event.isCancelled();
         }
@@ -105,8 +109,11 @@ public abstract class AbstractFurnaceBlockEntityMixin_Neo extends BaseContainerB
 
     // Tick down
     @Redirect(method = "serverTick", at = @At(value = "INVOKE", target = "Lnet/minecraft/util/Mth;clamp(III)I"))
-    private static int neo$resetCookTimeIfCancelled(final int newCookTime, final int zero, final int totalCookTime,
-                                                            final Level level, final BlockPos entityPos, final BlockState state, final AbstractFurnaceBlockEntity entityIn) {
+    private static int neo$resetCookTimeIfCancelled(
+        final int newCookTime, final int zero, final int totalCookTime,
+        final ServerLevel level, final BlockPos entityPos, final BlockState state,
+        final AbstractFurnaceBlockEntity entityIn
+    ) {
         final int clampedCookTime = Mth.clamp(newCookTime, zero, totalCookTime);
         final var entity = (AbstractFurnaceBlockEntityMixin_Neo) (Object) entityIn;
         final ItemStackSnapshot fuel = ItemStackUtil.snapshotOf(entity.items.get(1));
@@ -117,7 +124,7 @@ public abstract class AbstractFurnaceBlockEntityMixin_Neo extends BaseContainerB
             recipe.map(r -> (CookingRecipe) r.value()), recipe.map(r -> (ResourceKey) (Object) r.id()));
         SpongeCommon.post(event);
         if (event.isCancelled()) {
-            return entity.cookingProgress; // dont tick down
+            return entity.cookingTimer; // dont tick down
         }
 
         return clampedCookTime;
@@ -128,18 +135,29 @@ public abstract class AbstractFurnaceBlockEntityMixin_Neo extends BaseContainerB
         slice = @Slice(
             from = @At(value = "FIELD", target = "Lnet/minecraft/world/level/block/Blocks;WET_SPONGE:Lnet/minecraft/world/level/block/Block;", opcode = Opcodes.GETSTATIC)
         ))
-    private static void neo$captureBucketFill(final RegistryAccess registryAccess, final RecipeHolder<?> recipe, final NonNullList<ItemStack> slots, final int maxStackSize, final AbstractFurnaceBlockEntity entityIn, final CallbackInfoReturnable<Boolean> cir) {
-        ((AbstractFurnaceBlockEntityMixin_Neo) (Object) entityIn).neo$filledWaterBucket = true;
+    private static void neo$captureBucketFill(
+        final RegistryAccess registryAccess, final RecipeHolder<?> recipe, final SingleRecipeInput arg3,
+        final NonNullList<ItemStack> slots, final int maxStackSize, final CallbackInfoReturnable<Boolean> cir
+    ) {
+        final Cause cause = PhaseTracker.getCauseStackManager().currentCause();
+        final FurnaceBlockEntity entity = cause.first(FurnaceBlockEntity.class)
+            .orElseThrow(() -> new IllegalStateException("Expected to have a FurnaceBlockEntity in the Cause"));
+        ((AbstractFurnaceBlockEntityMixin_Neo) entity).neo$filledWaterBucket = true;
     }
 
     @Inject(method = "burn", at = @At(value = "INVOKE", target = "Lnet/minecraft/world/item/ItemStack;shrink(I)V", shift = At.Shift.AFTER))
-    private static void neo$afterSmeltItem(final RegistryAccess registryAccess, final RecipeHolder<?> recipe, final NonNullList<ItemStack> slots, final int maxStackSize, final AbstractFurnaceBlockEntity entityIn, final CallbackInfoReturnable<Boolean> cir) {
+    private static void neo$afterSmeltItem(
+        final RegistryAccess registryAccess, final RecipeHolder<? extends AbstractCookingRecipe> recipe,
+        final SingleRecipeInput input, final NonNullList<ItemStack> slots, final int maxStackSize,
+        final CallbackInfoReturnable<Boolean> cir
+    ) {
         final ItemStack itemIn = slots.get(0);
-        final ItemStack recipeResult = recipe.value().getResultItem(registryAccess);
+        final ItemStack recipeResult = recipe.value().assemble(input, registryAccess);
         final ItemStack itemOut = slots.get(2);
 
         final Cause cause = PhaseTracker.getCauseStackManager().currentCause();
-        final FurnaceBlockEntity entity = (FurnaceBlockEntity) entityIn;
+        final FurnaceBlockEntity entity = cause.first(FurnaceBlockEntity.class)
+            .orElseThrow(() -> new IllegalStateException("Expected to have a FurnaceBlockEntity in the Cause"));
 
         final List<SlotTransaction> transactions = new ArrayList<>();
         itemIn.grow(1);
@@ -163,7 +181,7 @@ public abstract class AbstractFurnaceBlockEntityMixin_Neo extends BaseContainerB
         }
         final Optional<ItemStackSnapshot> fuel = hasFuel && !slots.get(1).isEmpty() ? Optional.of(ItemStackUtil.snapshotOf(slots.get(1))) : Optional.empty();
         final CookingEvent.Finish event = SpongeEventFactory.createCookingEventFinish(cause, entity,
-            fuel, Optional.of((CookingRecipe) recipe.value()), Optional.of((ResourceKey) (Object) recipe.id()), Collections.unmodifiableList(transactions));
+            fuel, Optional.of((CookingRecipe) recipe.value()), Optional.of((ResourceKey) (Object) recipe.id().location()), Collections.unmodifiableList(transactions));
         SpongeCommon.post(event);
 
         for (final SlotTransaction transaction : transactions) {
